Fix social icon size too big

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,11 +20,6 @@ button {
     font-weight: bold;
 }
 
-img.socialIcon {
-    width: 30px;
-    height: 30px;
-}
-
 .rainbow {
     width: 100%;
     height: 38.5px;
